--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     </main>
     <footer>
         <div class="foot">
-          Made with ❤️ from Muzu
+          Made with ❤️ from Neha
         </div>
     </footer>
    </div>
